<resources>
    <!-- Main -->
    <string name="app_name">Bankop</string>
    <string name="accounts_title">Mis cuentas</string>
    <string name="menu_fab_label">¿Qué quieres agregar?</string>
    <string name="menu_fab_label_accounts">Cuenta</string>
    <string name="menu_fab_label_transactions">Transacción</string>
    <string name="menu_fab_label_transfers">Transferencia</string>
    <string name="see_transactions">Ver transacciones</string>
    <string name="edit_account">Editar</string>
    <string name="delete_account">Eliminar</string>
    <string name="image_description">Imagen</string>
    <string name="no_accounts_message">No tienes ninguna cuenta para operar, agrega una desde el lindo menú flotante para empezar!</string>
    <string name="no_accounts_error_message">Necesitas una cuenta para usar esta opción.</string>
    <string name="no_enough_accounts_error_message">Necesitas al menos 2 cuentas para usar esta opción.</string>

    <!-- Transaction details -->
    <string name="transaction_details_title">Detalles</string>
    <string name="source_account">Origen:</string>
    <string name="destination_account">Destino:</string>
    <string-array name="transaction_types_array">
        <item>Gasto</item>
        <item>Ingreso</item>
    </string-array>
    <string name="no_transactions_message">No hay transacciones para mostrar. Puedes agregar transacciones desde el menú principal.</string>

    <!-- Add account -->
    <string name="add_account_title">Agregar cuenta</string>
    <string name="account_name">Nombre cuenta</string>
    <string name="initial_value">Monto inicial</string>
    <string name="add">Agregar</string>
    <string name="cancel">Cancelar</string>
    <string name="fields_error_message">Hay campos necesarios que no han sido llenados y/o llenados incorrectamente.</string>
    <string name="accounts_success_message">¡Cuenta agregada!</string>

    <!-- Add transaction -->
    <string name="add_transaction_title">Agregar transacción</string>
    <string name="amount">Importe</string>
    <string-array name="test_accounts">
        <item>Efectivo</item>
        <item>Debito</item>
        <item>Plazo Fijo</item>
    </string-array>
    <string name="note">Nota…</string>
    <string name="transactions_success_message">¡Transacción guardada!</string>

    <!-- Add transfer -->
    <string name="add_transfer_title">Realizar transferencia</string>
    <string name="same_account_error">Las cuentas deben ser diferentes para realizar la transferencia.</string>
    <string name="transfers_success_message">¡Transferencia realizada!</string>

    <!-- Edit account -->
    <string name="edit_account_tittle">Editar cuenta</string>
    <string name="new_value">¿Ajustar monto?</string>
    <string name="edit_account_success_message">¡Cuenta editada!</string>
    <string name="save">Guardar</string>

    <!-- Delete account -->
    <string name="delete_account_warning">¿Estas seguro de borrar esta cuenta? No puedes deshacer esta operación en el futuro.</string>
    <string name="delete_account_success_message">¡Cuenta eliminada!</string>

    <!-- Edit transaction -->
    <string name="edit_transaction_title">Editar transacción</string>

    <!-- Delete transaction -->
    <string name="delete_transaction_warning">¿Estas seguro de borrar esta transacción? No puedes deshacer esta operación en el futuro.</string>
    <string name="delete_transaction_success_message">¡Transacción eliminada!</string>
    
    <!-- Edit transfer -->
    <string name="edit_transfer_title">Editar transferencia</string>

</resources>
