<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.me.squad.bankop.EditTransactionActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_transaction_title"
        android:textStyle="bold"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transaction_type_spinner"
        android:layout_marginTop="@dimen/margin_big_texts">
    </Spinner>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transaction_amount"
        android:layout_marginTop="@dimen/margin_big_texts"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/amount"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/account_spinner"
        android:layout_marginTop="@dimen/margin_big_texts">
    </Spinner>

    <EditText
        android:id="@+id/transaction_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:layout_marginTop="@dimen/margin_big_texts"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transaction_note"
        android:layout_marginTop="@dimen/margin_big_texts"
        android:ems="10"
        android:hint="@string/note"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_big_big_texts"
        android:paddingStart="@dimen/margin_normal_texts"
        android:paddingEnd="@dimen/margin_normal_texts"
        android:gravity="center">

        <Button
            android:id="@+id/edit_transaction_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/save"
            android:layout_marginEnd="@dimen/buttons_margin_transaction_details"
            android:background="@color/colorPrimary"
            android:textColor="@color/button_elements_background_color"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/cancel"
            android:layout_marginStart="@dimen/buttons_margin_transaction_details"
            android:background="@color/colorPrimary"
            android:textColor="@color/button_elements_background_color"/>

    </LinearLayout>

</LinearLayout>
