<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.me.squad.bankop.TransactionDetailsActivity"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/transaction_type_image_details"
        android:layout_width="@dimen/circle_image_dimens_transaction_details"
        android:layout_height="@dimen/circle_image_dimens_transaction_details"
        android:layout_marginTop="@dimen/margin_big_texts"
        android:layout_gravity="center_horizontal"
        tools:src="@drawable/ic_arrow_upward_black_24dp"
        tools:background="@color/expense_color" />

    <TextView
        android:id="@+id/transaction_amount_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_big_texts"
        android:textSize="@dimen/amount_card_text_size"
        tools:text="$2000.00"/>

    <TextView
        android:id="@+id/transaction_note_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big_texts"
        android:paddingStart="@dimen/margin_normal_texts"
        android:paddingEnd="@dimen/margin_normal_texts"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        tools:text="Something longer because this is a note and it needs to be longer"/>

    <TextView
        android:id="@+id/transaction_date_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_normal_texts"
        android:paddingStart="@dimen/margin_normal_texts"
        android:paddingEnd="@dimen/margin_normal_texts"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        tools:text="7/7/17 13:33"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_normal_texts"
        android:paddingStart="@dimen/margin_normal_texts"
        android:paddingEnd="@dimen/margin_normal_texts">

        <TextView
            android:id="@+id/account_source_transaction_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/source_account"
            android:layout_marginStart="16dp"
            tools:text="Efectivo"/>

        <TextView
            android:id="@+id/account_destination_transaction_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:textStyle="bold"
            android:text="@string/destination_account"
            android:layout_marginStart="16dp"
            tools:text="Debito"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_big_big_texts"
        android:paddingStart="@dimen/margin_normal_texts"
        android:paddingEnd="@dimen/margin_normal_texts"
        android:gravity="center">

        <Button
            android:id="@+id/edit_transaction_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/edit_account"
            android:layout_marginEnd="@dimen/buttons_margin_transaction_details"
            android:background="@color/colorPrimary"
            android:textColor="@color/button_elements_background_color"/>

        <Button
            android:id="@+id/delete_transaction_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/delete_account"
            android:layout_marginStart="@dimen/buttons_margin_transaction_details"
            android:background="@color/colorPrimary"
            android:textColor="@color/button_elements_background_color"/>

    </LinearLayout>

</LinearLayout>
